Added email only auth via firebase, added admin account for demo test alerts - added limits for apps per user/tokens
